--- a/src/style.scss
+++ b/src/style.scss
@@ -16,186 +16,551 @@ $base-size: 16px;
 }
 
 @function rem($size, $context: $base-size) {
-    @return $size / $base-size * 1rem;
+  @return $size / $base-size * 1rem;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5 {
+  color: #000;
 }
 
 .common-layout {
-    max-width: 1024px;
-    margin: 0 auto;
+  max-width: 1024px;
+  margin: 0 auto;
 }
 
 .d-flex {
-    display: flex;
+  display: flex;
 }
 
 .justify-center {
-    justify-content: center;
+  justify-content: center;
 }
 
 .align-center {
-    align-items: center;
+  align-items: center;
 }
 
 .line {
-    border-bottom: 6px solid #e4a416;
-    margin: rem(30px) auto;
+  border-bottom: 6px solid #e4a416;
+  margin: rem(30px) auto;
 
-    @for $i from 1 through 10 {
-        &.w-#{$i * 10} {
-            width: $i * 10%;
-        }
+  @for $i from 1 through 10 {
+    &.w-#{$i * 10} {
+      width: $i * 10%;
     }
+  }
 }
 
 .App {
-    width: 100%;
-    min-height: 100vh;
-    
+  width: 100%;
+  min-height: 100vh;
 
-    .header {
-        height: rem(500px);
-        background-color: #E6A813;
+  .header {
+    height: rem(500px);
+    background-color: #e6a813;
 
-        &__content {
-            margin: rem(50px) auto;
-        }
-
-        .left-col {
-            display: flex;
-            justify-content: center;
-            align-items: center;
-        }
-
-        .right-col {
-
-            @include media-query (md) {
-                padding: 0 rem(150px) 0 0;
-
-            }
-        }
-
-        &__img {
-            border-radius: 50%;
-            width: rem(100px);
-            height: rem(100px);
-        }
-
-        &__title {
-            font-size: 60px;
-            font-weight: 700;
-            color: #000;
-        }
+    &__content {
+      margin: rem(50px) auto;
     }
 
-    .airdrop {
-        padding: rem(15px) 0 rem(80px) 0;
-        &__lead {
-            padding: 0 rem(165px);
-        }
-
-        &__info {
-            &-box {
-                border-radius: 10px;
-                background: linear-gradient(#e4a416, #e4a416 0%, #e8d09b 100%);
-                width: rem(250px);
-                height: rem(220px);
-
-                margin: 0 auto;
-
-                display: flex;
-                justify-content: center;
-                align-items: center;
-                flex-direction: column;
-
-                p {
-                    color: white;
-                }
-
-                &__title {
-                    font-size: rem(20px);
-                    font-weight: 700
-                }
-
-                &__data {
-                    font-size: rem(30px);
-                    font-weight: 700
-                }
-
-                &__img {
-                    border-radius: 50%;
-                    width: 50px;
-                    height: 50px;
-                }
-            }
-        }
+    .left-col {
+      display: flex;
+      justify-content: center;
+      align-items: center;
     }
 
-    .referral {
-        background-color: #F3EDCB;
+    .right-col {
+      @include media-query(md) {
+        padding: 0 rem(150px) 0 0;
+      }
+    }
+
+    &__img {
+      border-radius: 50%;
+      width: rem(100px);
+      height: rem(100px);
+    }
+
+    &__title {
+      font-size: 60px;
+      font-weight: 700;
+      color: #000;
+    }
+  }
+
+  .airdrop {
+    padding: rem(15px) 0 rem(80px) 0;
+    &__lead {
+      width: 70%;
+      margin: 0 auto;
+    }
+
+    &__info {
+      &-box {
+        border-radius: 10px;
+        background: linear-gradient(#e4a416, #e4a416 0%, #e8d09b 100%);
+        width: rem(250px);
+        height: rem(220px);
+
+        margin: 10px auto 0;
 
         display: flex;
         justify-content: center;
         align-items: center;
+        flex-direction: column;
 
-        padding: rem(170px) 0;
-
-        &__content {
-            padding: rem(35px) rem(50px);
-            background-color: #E8D09B;
-            border-radius: 23px;
-            width: 100%;
-            margin: 0 auto;
-
-            display: flex;
-            justify-content: center;
-            align-items: center;
-
-            &__left-col {
-                
-
-                .level-block {
-                    margin: 15px 0;
-                    padding: rem(5px) rem(30px);
-                    display: flex;
-                    justify-content: space-between;
-                    align-items: center;
-    
-                    background-color: #EEF4FF;
-                    width: 100%;
-                    height: rem(65px);
-                    border-radius: 20px;
-
-                    P {
-                        margin-bottom: 0;
-                    }
-                }
-
-                @include media-query(xl) {
-                    width: rem(900px);
-                }
-            }
-
-            &__right-col {
-                display: flex;
-                justify-content: flex-end;
-                align-items: center;
-                .package {
-                    display: flex;
-                    justify-content: center;
-                    align-items: center;
-    
-                    flex-direction: column;
-
-                    background-color: #FFF;
-                    border-radius: 20px;
-
-                    width: 85%;
-
-                    padding: rem(50px) 0;
-                }
-            }
-
-            
+        p {
+          color: white;
         }
+
+        &__title {
+          font-size: rem(20px);
+          font-weight: 700;
+        }
+
+        &__data {
+          font-size: rem(30px);
+          font-weight: 700;
+        }
+
+        &__img {
+          border-radius: 50%;
+          width: 50px;
+          height: 50px;
+        }
+      }
     }
+  }
+
+  .referral {
+    background-color: #f3edcb;
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    padding: rem(170px) 0;
+
+    &__content {
+      padding: rem(35px) rem(50px);
+      background-color: #e8d09b;
+      border-radius: 23px;
+      width: 100%;
+      margin: 0 auto;
+
+      display: flex;
+      justify-content: center;
+      align-items: center;
+
+      &__left-col {
+        .level-block {
+          margin: 15px 0;
+          padding: rem(5px) rem(30px);
+          display: flex;
+          justify-content: space-between;
+          align-items: center;
+
+          background-color: #eef4ff;
+          width: 100%;
+          height: rem(65px);
+          border-radius: 20px;
+
+          P {
+            margin-bottom: 0;
+          }
+        }
+
+        @include media-query(xl) {
+          width: rem(900px);
+        }
+      }
+
+      &__right-col {
+        display: flex;
+        justify-content: flex-end;
+        align-items: center;
+        .package {
+          display: flex;
+          justify-content: center;
+          align-items: center;
+
+          flex-direction: column;
+
+          background-color: #fff;
+          border-radius: 20px;
+
+          width: 85%;
+
+          padding: rem(50px) 0;
+        }
+
+        .button-connect {
+          padding: 9px 40px;
+          font-size: 15px;
+          font-weight: 700;
+          line-height: 1.33;
+          letter-spacing: 1px;
+          text-transform: uppercase;
+          -webkit-border-radius: 8px;
+          -moz-border-radius: 8px;
+          border-radius: 8px;
+          -webkit-transition: all 100ms linear;
+          transition: all 100ms linear;
+          background-color: #fff;
+          color: #000;
+
+          &:hover {
+            background-color: #000;
+            color: #fff;
+          }
+        }
+      }
+    }
+  }
+
+  .eco {
+    background-color: #f2f2f2;
+    &__system {
+      padding: rem(20px) 0 rem(80px);
+      h5 {
+        font-weight: bolder;
+        color: #000;
+      }
+      &-block {
+        width: rem(165px);
+        margin: 0 auto;
+      }
+
+      &-block-2 {
+        width: rem(205px);
+        margin: 0 auto;
+      }
+    }
+
+    &__info {
+      width: 70%;
+      margin: 0 auto;
+      padding: rem(80px) 0 rem(200px);
+      a {
+        text-decoration: none;
+      }
+      .btn_def {
+        display: block;
+        padding: 9px 40px;
+        font-size: 15px;
+        font-weight: 700;
+        line-height: 1.33;
+        letter-spacing: 1px;
+        text-transform: uppercase;
+        -webkit-border-radius: 8px;
+        -moz-border-radius: 8px;
+        border-radius: 8px;
+        margin-right: 20px;
+        -webkit-transition: all 100ms linear;
+        transition: all 100ms linear;
+        background-color: #fff;
+        color: #000;
+
+        &.btn_dark_color {
+          background-color: #000;
+          color: #fff;
+
+          &:hover {
+            background-color: #fff;
+            color: #000;
+            box-shadow: 0 2px 20px 0 #fad400ba;
+          }
+        }
+
+        @include media-query(md) {
+          display: inline;
+        }
+      }
+    }
+  }
+
+  .roadmap {
+    background-color: #f8d327;
+
+    &__progress {
+      -webkit-font-smoothing: antialiased;
+      text-rendering: optimizeLegibility;
+      font-family: "Ubuntu", sans-serif;
+      padding: 0;
+      border: 0;
+      font-size: 100%;
+      vertical-align: baseline;
+      background-color: transparent;
+      list-style: none;
+      display: table;
+      width: 100%;
+      max-width: 230px;
+      margin: 0 auto;
+      padding-top: 80px;
+
+      @include media-query(md) {
+        max-width: 764px;
+        padding-top: 40px;
+      }
+
+      li {
+        float: none;
+        width: 100%;
+        min-height: 120px;
+        margin-bottom: 10px;
+        clear: both;
+        -webkit-font-smoothing: antialiased;
+        text-rendering: optimizeLegibility;
+        font-family: "Ubuntu", sans-serif;
+        margin: 0;
+        padding: 0;
+        border: 0;
+        font-size: 100%;
+        vertical-align: baseline;
+        background-color: transparent;
+        list-style: none;
+        position: relative;
+
+        @include media-query(md) {
+          float: left;
+          width: 50%;
+          min-height: 250px;
+          margin-bottom: 90px;
+          max-width: 350px;
+          clear: none;
+        }
+
+        span.icon_pointer {
+          width: 16px;
+          height: 16px;
+          display: block;
+          border: 2px solid rgba(0, 0, 0, 0.2);
+          float: left;
+          margin-left: 5px;
+          border-radius: 150%;
+          @include media-query(md) {
+            float: right;
+          }
+          &.check_add {
+            list-style: none;
+            font-weight: 300;
+            color: #000;
+            text-align: right;
+            margin: 0 10px 0 0;
+            padding: 0;
+            font-size: 100%;
+            vertical-align: baseline;
+            background-color: transparent;
+            display: block;
+            float: left;
+            margin-left: 5px;
+            border-radius: 150%;
+            background-image: url("https://corgidoge.com/assets/icon_check.svg");
+            background-position: center;
+            background-repeat: no-repeat;
+            background-size: contain;
+            width: 16px;
+            height: 16px;
+            border: none;
+
+            @include media-query(md) {
+              float: right;
+              margin: 0;
+            }
+          }
+        }
+        &::before {
+          background-color: #fff;
+          width: 2px;
+          position: absolute;
+
+          content: " ";
+          left: -25px;
+          right: inherit;
+          top: 31px;
+          height: 90px;
+
+          @include media-query(md) {
+            left: inherit;
+            right: -33px;
+            top: 42px;
+            height: 106px;
+          }
+        }
+
+        &::after {
+          border: 2px solid #fff;
+          -webkit-border-radius: 150%;
+          -moz-border-radius: 150%;
+          border-radius: 150%;
+          content: " ";
+          display: block;
+
+          position: absolute;
+
+          width: 25px;
+          height: 25px;
+          left: -38px;
+          right: inherit;
+          top: -4px;
+
+          @include media-query(md) {
+            width: 40px;
+            height: 40px;
+            top: -12px;
+            right: -54px;
+            left: inherit;
+          }
+        }
+
+        h3,
+        p {
+          text-align: left;
+
+          @include media-query(md) {
+            text-align: right;
+          }
+        }
+      }
+
+      li:first-child::after {
+        background-color: #000;
+        border-color: #000;
+        background-repeat: no-repeat;
+        background-position: center;
+        background-size: 25px;
+      }
+
+      li:nth-child(1)::after {
+        background-color: #fff;
+        background-repeat: no-repeat;
+        background-position: center;
+        background-size: 15px;
+        @include media-query(md) {
+          background-size: inherit;
+        }
+      }
+
+      li:nth-child(even):before {
+        left: -25px;
+        right: inherit;
+
+        @include media-query(md) {
+          left: -33px;
+        }
+      }
+
+      li:nth-child(even):after {
+        left: -38px;
+        right: inherit;
+
+        @include media-query(md) {
+          left: -54px;
+        }
+      }
+
+      li:nth-child(even) h3 {
+        text-align: left;
+      }
+
+      li:nth-child(even) p {
+        text-align: left;
+      }
+
+      li:nth-child(even) {
+        float: right;
+      }
+
+      li:nth-child(2) {
+        @include media-query(md) {
+            margin-top: rem(170px);
+        }
+      }
+
+      li:nth-child(even) span.icon_pointer {
+        float: left;
+        margin: 0 10px 0 0;
+      }
+    }
+  }
+
+  .find-us {
+    background-color: #f2f2f2;
+
+    &__list {
+      list-style: none;
+      text-align: center;
+
+      padding: 0;
+
+      li {
+        width: 200px;
+        height: 80px;
+        border-radius: 12px;
+        -webkit-border-radius: 12px;
+        -moz-border-radius: 12px;
+        background-color: #fff;
+        -webkit-transition: all 100ms linear;
+        transition: all 100ms linear;
+        vertical-align: top;
+        margin: 0 9px 20px 9px;
+        display: inline-block;
+
+        &:hover {
+          box-shadow: 0 2px 24px 0 #fad400ba;
+          filter: grayscale(0%);
+        }
+
+        a {
+          height: 100%;
+          width: 100%;
+          display: flex;
+          align-items: center;
+          justify-content: center;
+
+          img {
+            height: calc(100% - 20px);
+            max-width: calc(100% - 40px);
+            margin: auto;
+          }
+        }
+      }
+    }
+
+    .leads {
+      font-size: rem(12px);
+      font-weight: 300;
+      color: #000;
+    }
+  }
+
+  footer {
+    padding: rem(30px);
+
+    .icon {
+      padding: 0 rem(5px);
+    }
+
+    a {
+      color: black;
+
+      &:hover {
+        opacity: 0.6;
+      }
+
+      text-decoration: none;
+    }
+
+    .copy-right {
+      margin-bottom: 0;
+    }
+
+    .contact {
+      margin-top: 1rem;
+    }
+  }
 }
